Modifications for Safari layout issues

--- a/app/styles/components/_enigami.scss
+++ b/app/styles/components/_enigami.scss
@@ -11,6 +11,7 @@
 	-webkit-box-flex: 1;
   	-moz-box-flex:  1;
   	flex:  1;
+  	position: relative;
 	&:nth-child(1) {
 		.enigami-color {
 			background-color: #526275;
@@ -40,6 +41,8 @@
 .enigami-color {
 	width: 100%;
 	height: 100%;
+	// Required for Safari to honor the 100% width and height
+	position: absolute;
 }
 .enigami-logo {
 	img {
