--- a/app/styles/components/_tapigo.scss
+++ b/app/styles/components/_tapigo.scss
@@ -16,6 +16,7 @@
 	-webkit-box-flex: 1;
   	-moz-box-flex:  1;
   	flex:  1;
+  	position: relative;
 	&:nth-child(1) {
 		.tapigo-color {
 			background-color: #323C48;
@@ -45,6 +46,8 @@
 .tapigo-color {
 	width: 100%;
 	height: 100%;
+	// Required to make Safari honor the 100% width and height
+	position: absolute;
 }
 
 .tapigo-typeface-container {
@@ -73,11 +76,20 @@
 }
 
 .icon-containers {
+	display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+	display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+	display: -ms-flexbox;      /* TWEENER - IE 10 */
+	display: -webkit-flex;     /* NEW - Chrome */
 	display: flex;
 	flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	-moz-flex-wrap: wrap;
 }
 .icon-container {
-	flex: 1;
+	flex: 1 1 7em;
+	-webkit-box-flex: 1 1 7em;
+  	-moz-box-flex:  1 1 7em;
 	img {
 		min-width: 152px;
 		margin: 50px 20px 0px 20px;
